removed www for Qimin

--- a/project/lib/templates/lib/about.html
+++ b/project/lib/templates/lib/about.html
@@ -230,9 +230,9 @@
     <h3>Current</h3>
         <ul class="simple">
             <li>Oscar Beijbom - Director [<a href="https://beijbom.github.io/">www</a>]</li>
-            <li>Stephen Chan - Lead Developer [<a href="https://github.com/StephenChan">www</a>]</li>
+            <li>Stephen Chan - Lead Developer </li>
             <li>David Kriegman - Academic advisor [<a href="http://cseweb.ucsd.edu/~kriegman/">www</a>]</li>
-            <li>Qimin Chen - Vision research [<a href="http://jessbm.weebly.com">www</a>]</li>
+            <li>Qimin Chen - Vision researcher </li>
             <li>Jessica Bouwmeester - LabelSet curation [<a href="http://jessbm.weebly.com">www</a>]</li>
         </ul>
     <h3>Alumni</h3>
