--- a/project/labels/templates/labels/label_list_verified_help.html
+++ b/project/labels/templates/labels/label_list_verified_help.html
@@ -4,7 +4,7 @@
     <a href="/about/#people">curator</a>. It needs to comply with the following criterion
     <ul class="simple">
     <li>Correct spelling.</li>
-    <li>Label-code consistent with other labels.</li>
+    <li>Default Short Code formatting consistent with other labels.</li>
     <li>Satisfactory description.</li>
     <li>No duplicates.</li>
     </ul>
