--- a/project/labels/templates/labels/label_list_verified_help.html
+++ b/project/labels/templates/labels/label_list_verified_help.html
@@ -1,5 +1,5 @@
 <p>
-    A label is verified after is has been inspected by our label-set
+    A label is verified after it has been inspected by our label-set
     <a href="/about/#people">curator</a>. It needs to comply with the following criterion
     <ul class="simple">
     <li>Correct spelling.</li>
