fixed wording after feedback

--- a/project/lib/templates/lib/about.html
+++ b/project/lib/templates/lib/about.html
@@ -32,9 +32,9 @@
     <h4>Introduction</h4>
     <p>
         A catastrophic decline of biodiversity and coral cover is occuring at reefs across the world.
-        To monitor the changes and inform action plans large spatiotemporal surveys are needed. Data
+        To monitor the changes, and inform action plans, large spatiotemporal surveys are needed. Data
         collection methods are typically sufficient to meet this need but the subsequent image analysis
-        remains slow as manual inspection of each photo is required, effectively creating "manual annotation bottleneck".
+        requires manual inspection of each photo, creating manual annotation bottleneck.
     </p>
     <p>
         CoralNet reduces this bottleneck by deploying state of the art computer vision methods
@@ -65,7 +65,7 @@
         It was a scrappy effort but it worked!
     </p>
     <p>
-        The compure vision backend of CoralNet Alpha deployed an
+        The computer vision backend of CoralNet Alpha deployed an
         <a href="http://vision.ucsd.edu/sites/default/files/automated_coral_annotation.pdf">
         early research method</a> which worked well, but not on par with human annotators.
         At the time, most users did not use the automated annotation engine, but were happy to have access to a free,
@@ -91,7 +91,7 @@
         experts collaborated with the autonomous system.
     </p>
     <p>
-        CoralNet lead developer Stephen Chan lead the software updates for the beta release, while Oscar Beijbom
+        CoralNet lead developer Stephen Chan led the software updates for the beta release, while Oscar Beijbom
         developed the computer vision backend.
         For full release notes refer to <a href="{% url 'release' %}">CoralNet Beta release-notes</a>.
     </p>
