--- a/project/lib/templates/lib/about.html
+++ b/project/lib/templates/lib/about.html
@@ -95,7 +95,7 @@
         developed the computer vision backend.
         For full release notes refer to <a href="{% url 'release' %}">CoralNet Beta release-notes</a>.
     </p>
-    <h4>CoralNet Gamma (Work in Progress!)</h4>
+    <h4>CoralNet Beta 2 (Work in Progress!)</h4>
     <p>
         In early 2019
         <a href="https://www.frontiersin.org/articles/10.3389/fmars.2019.00222/full">Williams et al.</a> at NOAA
@@ -104,7 +104,7 @@
         This study thus suggests that CoralNet was finally accurate enough to address the manual annotation bottleneck!
     </p>
     <p>
-        Following these results a second grant was received from NOAA to develop CoralNet Gamma.
+        Following these results a second grant was received from NOAA to develop CoralNet Beta 2.
         This work will proceed along two main avenues.
         First, an API will be developed to allow the deployment of a trained classifier on vast number of images.
         This, in turn, enables the creation of a repository of trained classifiers from which users can choose from.
