Fixed line-breaks, removed form-level clean

--- a/project/labels/templates/labels/label_edit.html
+++ b/project/labels/templates/labels/label_edit.html
@@ -12,7 +12,7 @@
 
   <form id="label-form" action="" method="post" enctype="multipart/form-data">
     {% csrf_token %}
-
+    {{ form.non_field_errors }}
     {% for field in form %}
       <div class="errorlist_wrapper">{{ field.errors }}</div>
 
