--- a/project/newsfeed/templates/newsfeed/global.html
+++ b/project/newsfeed/templates/newsfeed/global.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<table class="detail_table_popup">
+<table class="detail_table_scroll">
     <tr>
         <th>time</th>
         <th>app</th>
